--- a/dslr-qt-shooter/ui/dslr_shooter_window.ui
+++ b/dslr-qt-shooter/ui/dslr_shooter_window.ui
@@ -133,8 +133,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>228</width>
-           <height>301</height>
+           <width>219</width>
+           <height>294</height>
           </rect>
          </property>
          <attribute name="label">
@@ -168,29 +168,43 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>214</width>
-           <height>435</height>
+           <width>205</width>
+           <height>370</height>
           </rect>
          </property>
          <attribute name="label">
           <string>Camera Setup</string>
          </attribute>
          <layout class="QGridLayout" name="gridLayout_3">
-          <item row="12" column="0">
-           <widget class="QLabel" name="label_10">
+          <item row="3" column="0">
+           <widget class="QLabel" name="label_2">
             <property name="text">
-             <string>Manual Exposure</string>
+             <string>Shoot Interval</string>
             </property>
            </widget>
           </item>
-          <item row="12" column="1">
-           <widget class="QLabel" name="manualExposureLabel">
+          <item row="11" column="1">
+           <widget class="QLabel" name="imageFormatLabel">
             <property name="text">
              <string/>
             </property>
            </widget>
           </item>
           <item row="13" column="0">
+           <widget class="QLabel" name="label_10">
+            <property name="text">
+             <string>Manual Exposure</string>
+            </property>
+           </widget>
+          </item>
+          <item row="13" column="1">
+           <widget class="QLabel" name="manualExposureLabel">
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="14" column="0">
            <spacer name="verticalSpacer_3">
             <property name="orientation">
              <enum>Qt::Vertical</enum>
@@ -224,106 +238,70 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="0">
-           <widget class="QSpinBox" name="shoot_interval">
-            <property name="minimum">
-             <number>1</number>
-            </property>
-            <property name="maximum">
-             <number>256</number>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="0" colspan="2">
-           <widget class="QLabel" name="label_2">
-            <property name="text">
-             <string>Shoot Interval</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="1">
-           <widget class="QComboBox" name="shoot_interval_unit">
-            <item>
-             <property name="text">
-              <string>Seconds</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Minutes</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Hours</string>
-             </property>
-            </item>
-           </widget>
-          </item>
-          <item row="5" column="0" colspan="2">
+          <item row="6" column="0" colspan="2">
            <widget class="QLabel" name="label_3">
             <property name="text">
              <string>Images to capture</string>
             </property>
            </widget>
           </item>
-          <item row="6" column="0" colspan="2">
+          <item row="7" column="0" colspan="2">
            <widget class="QSpinBox" name="images_count">
             <property name="suffix">
              <string> images</string>
             </property>
            </widget>
           </item>
-          <item row="11" column="0">
+          <item row="12" column="0">
            <widget class="QLabel" name="label_5">
             <property name="text">
              <string>Shutter Speed</string>
             </property>
            </widget>
           </item>
-          <item row="7" column="0" colspan="2">
+          <item row="8" column="0" colspan="2">
            <widget class="QPushButton" name="imageSettings">
             <property name="text">
              <string>Image Settings...</string>
             </property>
            </widget>
           </item>
-          <item row="9" column="0">
-           <widget class="QLabel" name="label_4">
-            <property name="text">
-             <string>ISO</string>
-            </property>
-           </widget>
-          </item>
-          <item row="10" column="0">
-           <widget class="QLabel" name="label_6">
-            <property name="text">
-             <string>Image Format</string>
-            </property>
-           </widget>
-          </item>
-          <item row="9" column="1">
+          <item row="10" column="1">
            <widget class="QLabel" name="isoLabel">
             <property name="text">
              <string/>
             </property>
            </widget>
           </item>
-          <item row="11" column="1">
+          <item row="10" column="0">
+           <widget class="QLabel" name="label_4">
+            <property name="text">
+             <string>ISO</string>
+            </property>
+           </widget>
+          </item>
+          <item row="11" column="0">
+           <widget class="QLabel" name="label_6">
+            <property name="text">
+             <string>Image Format</string>
+            </property>
+           </widget>
+          </item>
+          <item row="12" column="1">
            <widget class="QLabel" name="shutterSpeedLabel">
             <property name="text">
              <string/>
             </property>
            </widget>
           </item>
-          <item row="10" column="1">
-           <widget class="QLabel" name="imageFormatLabel">
+          <item row="5" column="0" colspan="2">
+           <widget class="QCheckBox" name="ditherAfterShot">
             <property name="text">
-             <string/>
+             <string>Dither after each shot</string>
             </property>
            </widget>
           </item>
-          <item row="8" column="0" colspan="2">
+          <item row="9" column="0" colspan="2">
            <widget class="QGroupBox" name="groupBox">
             <property name="title">
              <string>Files</string>
@@ -366,10 +344,13 @@
             </layout>
            </widget>
           </item>
-          <item row="4" column="0" colspan="2">
-           <widget class="QCheckBox" name="ditherAfterShot">
-            <property name="text">
-             <string>Dither after each shot</string>
+          <item row="3" column="1">
+           <widget class="QTimeEdit" name="shoot_interval">
+            <property name="currentSection">
+             <enum>QDateTimeEdit::SecondSection</enum>
+            </property>
+            <property name="displayFormat">
+             <string>HH:mm:ss</string>
             </property>
            </widget>
           </item>
@@ -380,8 +361,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>228</width>
-           <height>301</height>
+           <width>219</width>
+           <height>294</height>
           </rect>
          </property>
          <attribute name="label">
@@ -438,7 +419,7 @@
      <x>0</x>
      <y>0</y>
      <width>955</width>
-     <height>20</height>
+     <height>18</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuCamera">
