--- a/dslr-qt-shooter/ui/dslr_shooter_window.ui
+++ b/dslr-qt-shooter/ui/dslr_shooter_window.ui
@@ -144,7 +144,7 @@
            <x>0</x>
            <y>0</y>
            <width>98</width>
-           <height>38</height>
+           <height>34</height>
           </rect>
          </property>
          <attribute name="label">
@@ -178,8 +178,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>219</width>
-           <height>414</height>
+           <width>198</width>
+           <height>365</height>
           </rect>
          </property>
          <attribute name="label">
@@ -386,8 +386,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>123</width>
-           <height>96</height>
+           <width>111</width>
+           <height>84</height>
           </rect>
          </property>
          <attribute name="label">
@@ -435,8 +435,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>306</width>
-           <height>482</height>
+           <width>300</width>
+           <height>473</height>
           </rect>
          </property>
          <attribute name="label">
@@ -453,7 +453,7 @@
           <item row="1" column="0">
            <widget class="QLabel" name="focus_analysis_type">
             <property name="text">
-             <string>HFD</string>
+             <string>HFD (lower is better)</string>
             </property>
            </widget>
           </item>
@@ -474,14 +474,7 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="0">
-           <widget class="QLabel" name="focus_analysis_history">
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="1">
+          <item row="5" column="1">
            <spacer name="verticalSpacer_4">
             <property name="orientation">
              <enum>Qt::Vertical</enum>
@@ -493,6 +486,22 @@
              </size>
             </property>
            </spacer>
+          </item>
+          <item row="3" column="0" colspan="2">
+           <widget class="QwtPlot" name="focusing_graph" native="true"/>
+          </item>
+          <item row="4" column="0" colspan="2">
+           <widget class="QLabel" name="focus_analysis_history">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
@@ -517,7 +526,7 @@
      <x>0</x>
      <y>0</y>
      <width>955</width>
-     <height>20</height>
+     <height>18</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuCamera">
@@ -595,6 +604,11 @@
   </action>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>QwtPlot</class>
+   <extends></extends>
+   <header>qwt-src/qwt_plot.h</header>
+  </customwidget>
   <customwidget>
    <class>ZoomableImage</class>
    <extends>QWidget</extends>
